--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,21 +1,24 @@
-@media (max-width: 768px) {
+@media (max-width: 1280px) {
     .hide-on-mobile {
         display: none;
     }
 }
 
-/* @media (min-width: 767px) {
+@media (min-width: 1280px) {
     .show-on-mobile {
         display: none;
     }
-} */
+}
 
 
 
 
+@media  screen and  (orientation: landscape) and (max-width: 768px) {
+    .hide-on-mobile {
+        display: none;
+    }
 
-
-
+}
 
 
 
@@ -40,6 +43,3 @@
         display: none;
     }
 } */
-
-
-
