--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,4 @@
-@media (max-width: 1280px) {
+/* @media (max-width: 1280px) {
     .hide-on-mobile {
         display: none;
     }
@@ -18,28 +18,8 @@
         display: none;
     }
 
-}
-
-
-
-
-/* @media screen and (max-width:480px) and (min-width: 320px) {
-    .show-on-mobile {
-        display: block;
-    }
-
-}
-
-
-@media screen and (max-width: 767px) {
-    .show-on-mobile {
-        display: none;
-    }
-}
-
-
-@media screen and (max-width: 800px) {
-    .show-on-mobile {
-        display: none;
-    }
 } */
+
+
+
+
